--- a/app/views/journals/show.html.erb
+++ b/app/views/journals/show.html.erb
@@ -68,7 +68,12 @@
 
 </div>
 
-<%= will_paginate @entries %>
+<div class="row top-buffer-40">
+  <div class="col-md-8">
+    <%== pagy_nav(@pagy) if @pagy.pages > 1 %>
+  </div>
+</div>
+
 <table class="table table-condensed top-buffer-20">
 
   <thead>
@@ -218,4 +223,8 @@
   </tfoot>
 </table>
 
-<%= will_paginate @entries %>
+<div class="row top-buffer-40">
+  <div class="col-md-8">
+    <%== pagy_nav(@pagy) if @pagy.pages > 1 %>
+  </div>
+</div>
