fix 7e7530d: nie łam lini z nazwą i wersją instancji w stopce

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,12 +1,12 @@
 <div class="well well-small" style="margin-top: 60px">
   <div class="row">
-    <div class="col-md-3 text-left">
+    <div class="col-md-4 text-left">
       <b><%= link_to root_url do %>ZiHeR / <%= ENV["ZIHER_APP_NAME"] %><% end %></b> - wersja <a href="https://github.com/ziher/ziher/commits/<%= ApplicationController::ZIHER_COMMIT %>"><%= ApplicationController::ZIHER_VERSION %></a>
     </div>
-    <div class="col-md-4 col-md-offset-1 text-center">
+    <div class="col-md-4 text-center">
       <a href="http://www.zhr.pl">Związek Harcerstwa Rzeczypospolitej</a>
     </div>
-    <div class="col-md-3 col-md-offset-1 text-right">
+    <div class="col-md-4 text-right">
       Kontakt: <b><a href="mailto:ziher@zhr.pl">ziher@zhr.pl</a></b>
     </div>
   </div>
