--- a/app/views/grants/edit.html.erb
+++ b/app/views/grants/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Grant</h1>
+<h1>Edycja dotacji</h1>
 
 <%= render 'form', grant: @grant %>
 
-<%= link_to 'Show', @grant %> |
-<%= link_to 'Back', grants_path %>
+<%= link_to 'Pokaż', @grant %> |
+<%= link_to 'Powrót', grants_path %>
