--- a/app/views/grants/show.html.erb
+++ b/app/views/grants/show.html.erb
@@ -1,14 +1,12 @@
-<p id="notice"><%= notice %></p>
-
 <p>
-  <strong>Name:</strong>
+  <strong>Nazwa:</strong>
   <%= @grant.name %>
 </p>
 
 <p>
-  <strong>Description:</strong>
+  <strong>Opis:</strong>
   <%= @grant.description %>
 </p>
 
-<%= link_to 'Edit', edit_grant_path(@grant) %> |
-<%= link_to 'Back', grants_path %>
+<%= link_to 'Edytuj', edit_grant_path(@grant) %> |
+<%= link_to 'Powrót', grants_path %>
