--- a/app/views/grants/new.html.erb
+++ b/app/views/grants/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Grant</h1>
+<h1>Nowa dotacja</h1>
 
 <%= render 'form', grant: @grant %>
 
-<%= link_to 'Back', grants_path %>
+<%= link_to 'Powrót', grants_path %>
