bugfix: nie pokazuj kropek dla listy kategorii na dany rok

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -23,7 +23,7 @@
     <div class="col-md-3">
       <div class="well">
         <b><%= categories[:label] %></b><br /><br/>
-        <ul class="categories unstyled">
+        <ul class="categories list-unstyled">
           <% categories[:data].each do |category| %>
             <li id="category_<%= category.id %>">
               <span class="handle"><span class="glyphicon glyphicon-align-justify" title="Chwyć i przenieś"></span></span>
