--- a/app/views/reports/all_one_percent.pdf.erb
+++ b/app/views/reports/all_one_percent.pdf.erb
@@ -15,7 +15,7 @@
     <table class="table table-condensed table-bordered">
       <tr>
         <td class="text-center" style="font-size: small"><b>
-          <span class="text-uppercase">Całościowe sprawozdanie finansowe ze środków z tytułu 1% podatku dochodowego od osób fizycznych za okres od <%= @report_start_date %>
+          <span class="text-uppercase">Całościowe sprawozdanie finansowe ze środków z tytułu <%= @report_short_name %> za okres od <%= @report_start_date %>
             do <%= @report_end_date %></span>
           <br/>
         </b>
@@ -32,7 +32,7 @@
     <table class="table table-condensed table-bordered">
       <tr>
         <td class="text-center">
-          Oświadczam, że w sprawozdaniu zostały ujęte wszystkie wpływy środków z tytułu 1% i wydatki tych środków,
+          Oświadczam, że w sprawozdaniu zostały ujęte wszystkie wpływy środków z tytułu <%= @report_long_name %> i wydatki tych środków,
           dokonane w okresie sprawozdawczym, zgodnie z posiadanymi przez jednostkę dowodami źródłowymi
           <hr/>
           <i>(data, imię, nazwisko i podpis komendanta (opiekuna) jednostki składającej sprawozdanie)</i>
