--- a/app/views/reports/finance.html.erb
+++ b/app/views/reports/finance.html.erb
@@ -6,6 +6,9 @@
     function reloadForUnit(unit_id) {
         document.location.href = "<%= @report_link %>?unit_id=" + unit_id;
     }
+    function reloadForGrant(grant_id) {
+        document.location.href = "<%= @report_link %>?grant_id=" + grant_id;
+    }
 </script>
 
 <div class="row">
@@ -14,7 +17,18 @@
   </div>
   <div class="col-md-6">
     <div class="row">
-      <div class="col-md-10">
+      <div class="col-md-2">
+      <% if not @selected_grant_id.blank? %>
+        <div class="pull-right top-buffer-20">
+          <select class="no-margin" onchange="reloadForGrant(this.value)">
+          <% @grants.each do |grant| %>
+              <option value="<%= grant.id %>" <%= grant.id.to_s == @selected_grant_id.to_s ? 'selected=selected' : '' %>><%= grant.name %></option>
+          <% end %>
+        </select>
+        </div>
+      <% end %>
+      </div>
+      <div class="col-md-8">
         <div class="top-buffer-20">
           <select style="padding: 0; width:100%;" onchange="reloadForUnit(this.value)">
             <% @user_units.each do |unit| %>
