chore: poprawka dla raportów przy opisie dla sporządzenia raportu

--- a/app/views/reports/all_one_percent.pdf.erb
+++ b/app/views/reports/all_one_percent.pdf.erb
@@ -44,7 +44,7 @@
 
 <div class="row">
   <div class="col-md-12" style="margin-top: 100px">
-    Sporządził: <%= current_user.first_name %> <%= current_user.last_name %>
+    Sporządzenie: <%= current_user.first_name %> <%= current_user.last_name %>
     <br/>
     <%= @generation_time.strftime ('%Y-%m-%d %H:%M:%S') %>
   </div>
