--- a/app/views/reports/finance.pdf.erb
+++ b/app/views/reports/finance.pdf.erb
@@ -57,7 +57,7 @@
 
 <div class="row">
   <div class="col-md-12">
-    Sporządził: <%= current_user.first_name %> <%= current_user.last_name %>
+    Sporządzenie: <%= current_user.first_name %> <%= current_user.last_name %>
     <br/>
     <%= @generation_time.strftime ('%Y-%m-%d %H:%M:%S') %>
   </div>
@@ -103,7 +103,7 @@
 
 <div class="row">
   <div class="col-md-12">
-    Sporządził: <%= current_user.first_name %> <%= current_user.last_name %>
+    Sporządzenie: <%= current_user.first_name %> <%= current_user.last_name %>
     <br/>
     <%= @generation_time.strftime ('%Y-%m-%d %H:%M:%S') %>
   </div>
