--- a/app/views/journals/show.html.erb
+++ b/app/views/journals/show.html.erb
@@ -81,21 +81,21 @@
 
   <thead>
     <tr>
-      <th colspan="<%= @categories_income.count + 3 %>" class="balance-label" title="<%=@journal.journal_type.name%> dla <%= @journal.unit.name %>, <%=@journal.year%>">
+      <th colspan="<%= @categories_income.length + 3 %>" class="balance-label" title="<%=@journal.journal_type.name%> dla <%= @journal.unit.name %>, <%=@journal.year%>">
         <span class="pull-left label label-default" style="font-size: 85%;"><%= @journal.opened_from_info %></span>
         <span class="pull-right text-muted"><small>Saldo początkowe:</small></span>
       </th>
-      <th colspan="<%= @categories_expense.count + 2 %>" class="balance" id="initial-balance">
+      <th colspan="<%= @categories_expense.length + 2 %>" class="balance" id="initial-balance">
         <span class="pull-left"><small>
           <%= number_with_precision(@journal.initial_balance, :precision => 2) %> zł
         </small></span>
       </th>
     </tr>
     <tr>
-      <th colspan="<%= @categories_income.count + 3 %>" class="balance-label" style="border-top: none; border-bottom: none" title="<%=@journal.journal_type.name%> dla <%= @journal.unit.name %>, <%=@journal.year%>">
+      <th colspan="<%= @categories_income.length + 3 %>" class="balance-label" style="border-top: none; border-bottom: none" title="<%=@journal.journal_type.name%> dla <%= @journal.unit.name %>, <%=@journal.year%>">
         <span class="pull-right text-muted"><small>w tym 1%:</small></span>
       </th>
-      <th colspan="<%= @categories_expense.count + 2 %>" class="balance" id="initial-balance" style="border-top: none; border-bottom: none">
+      <th colspan="<%= @categories_expense.length + 2 %>" class="balance" id="initial-balance" style="border-top: none; border-bottom: none">
         <span class="pull-left"><small>
           <%= number_with_precision(@journal.initial_balance_one_percent, :precision => 2) %> zł
         </small></span>
@@ -104,8 +104,8 @@
       <% @grants_by_journal_year.each do |grant| %>
         <tr>
           <th colspan="3" style="border-top: none; border-bottom: none"></th>
-          <th colspan="<%= @categories_income.count %>" class="balance-label" style="border-top: none; border-bottom: none"><span class="pull-right text-muted"><small>w tym <%= grant.name %>:</small></span></th>
-          <th colspan="<%= @categories_expense.count + 2 %>" class="balance" id="initial-balance" style="border-top: none; border-bottom: none">
+          <th colspan="<%= @categories_income.length %>" class="balance-label" style="border-top: none; border-bottom: none"><span class="pull-right text-muted"><small>w tym <%= grant.name %>:</small></span></th>
+          <th colspan="<%= @categories_expense.length + 2 %>" class="balance" id="initial-balance" style="border-top: none; border-bottom: none">
             <span class="pull-left"><small>
               <%= number_with_precision(@journal.initial_balance_for_grant(grant), :precision => 2) %> zł
             </small></span>
@@ -118,10 +118,10 @@
       <th rowspan="2" class="valign_middle"><small>#</small></th>
       <th rowspan="2" class="valign_middle text-center"><small>Data</small></th>
       <th rowspan="2" class="valign_middle text-center"><small>Opis<br/>Numer dokumentu</small></th>
-      <th colspan="<%= @categories_income.count %>" class="text-center"><small><%=t 'helpers.label.journal.income_detailed'%></small></th>
+      <th colspan="<%= @categories_income.length %>" class="text-center"><small><%=t 'helpers.label.journal.income_detailed'%></small></th>
       <th rowspan="2" class="income income_all valign_middle text-center"><small><%=t 'helpers.label.journal.income_all'%></small></th>
       <th rowspan="2" class="expense expense_all valign_middle text-center"><small><%=t 'helpers.label.journal.expense_all'%></small></th>
-      <th colspan="<%= @categories_expense.count %>" class="text-center"><small><%=t 'helpers.label.journal.expense_detailed'%></small></th>
+      <th colspan="<%= @categories_expense.length %>" class="text-center"><small><%=t 'helpers.label.journal.expense_detailed'%></small></th>
     </tr>
 
     <tr>
@@ -134,7 +134,7 @@
     </tr>
   </thead>
 
-  <% if @entries.length > 0 %>
+  <% if @entries.any? %>
     <tbody class="border-top-bold">
     <% position = @start_position %>
     <% @entries.each do |entry| %>
@@ -236,8 +236,8 @@
 
     <tr>
       <th colspan="3"></th>
-      <th colspan="<%= @categories_income.count %>" class="balance-label"><span class="pull-right text-muted"><small>Saldo końcowe:</small></span></th>
-      <th colspan="<%= @categories_expense.count + 2 %>" class="balance" id="initial-balance">
+      <th colspan="<%= @categories_income.length %>" class="balance-label"><span class="pull-right text-muted"><small>Saldo końcowe:</small></span></th>
+      <th colspan="<%= @categories_expense.length + 2 %>" class="balance" id="initial-balance">
         <span class="pull-left"><small>
           <%= number_with_precision(@journal.get_final_balance, :precision => 2) %> zł
         </small></span>
@@ -245,8 +245,8 @@
     </tr>
     <tr>
       <th colspan="3" style="border-top: none"></th>
-      <th colspan="<%= @categories_income.count %>" class="balance-label" style="border-top: none"><span class="pull-right text-muted"><small>w tym 1%:</small></span></th>
-      <th colspan="<%= @categories_expense.count + 2 %>" class="balance" id="initial-balance" style="border-top: none">
+      <th colspan="<%= @categories_income.length %>" class="balance-label" style="border-top: none"><span class="pull-right text-muted"><small>w tym 1%:</small></span></th>
+      <th colspan="<%= @categories_expense.length + 2 %>" class="balance" id="initial-balance" style="border-top: none">
         <span class="pull-left"><small>
           <%= number_with_precision(@journal.get_final_balance_one_percent, :precision => 2) %> zł
         </small></span>
@@ -256,8 +256,8 @@
     <% @grants_by_journal_year.each do |grant| %>
       <tr>
         <th colspan="3" style="border-top: none"></th>
-        <th colspan="<%= @categories_income.count %>" class="balance-label" style="border-top: none"><span class="pull-right text-muted"><small>w tym <%= grant.name %>:</small></span></th>
-        <th colspan="<%= @categories_expense.count + 2 %>" class="balance" id="initial-balance" style="border-top: none">
+        <th colspan="<%= @categories_income.length %>" class="balance-label" style="border-top: none"><span class="pull-right text-muted"><small>w tym <%= grant.name %>:</small></span></th>
+        <th colspan="<%= @categories_expense.length + 2 %>" class="balance" id="initial-balance" style="border-top: none">
           <span class="pull-left"><small>
             <%= number_with_precision(@journal.get_final_balance_for_grant(grant), :precision => 2) %> zł
           </small></span>
