--- a/app/views/journals/show.html.erb
+++ b/app/views/journals/show.html.erb
@@ -81,7 +81,7 @@
 
   <thead>
     <tr>
-      <th colspan="<%= @categories_income.length + 3 %>" class="balance-label" title="<%=@journal.journal_type.name%> dla <%= @journal.unit.name %>, <%=@journal.year%>">
+      <th colspan="<%= @categories_income.length + 4 %>" class="balance-label" title="<%=@journal.journal_type.name%> dla <%= @journal.unit.name %>, <%=@journal.year%>">
         <span class="pull-left label label-default" style="font-size: 85%;"><%= @journal.opened_from_info %></span>
         <span class="pull-right text-muted"><small>Saldo początkowe:</small></span>
       </th>
@@ -92,7 +92,7 @@
       </th>
     </tr>
     <tr>
-      <th colspan="<%= @categories_income.length + 3 %>" class="balance-label" style="border-top: none; border-bottom: none" title="<%=@journal.journal_type.name%> dla <%= @journal.unit.name %>, <%=@journal.year%>">
+      <th colspan="<%= @categories_income.length + 4 %>" class="balance-label" style="border-top: none; border-bottom: none" title="<%=@journal.journal_type.name%> dla <%= @journal.unit.name %>, <%=@journal.year%>">
         <span class="pull-right text-muted"><small>w tym 1%:</small></span>
       </th>
       <th colspan="<%= @categories_expense.length + 2 %>" class="balance" id="initial-balance" style="border-top: none; border-bottom: none">
@@ -103,7 +103,7 @@
 
       <% @grants_by_journal_year.each do |grant| %>
         <tr>
-          <th colspan="3" style="border-top: none; border-bottom: none"></th>
+          <th colspan="4" style="border-top: none; border-bottom: none"></th>
           <th colspan="<%= @categories_income.length %>" class="balance-label" style="border-top: none; border-bottom: none"><span class="pull-right text-muted"><small>w tym <%= grant.name %>:</small></span></th>
           <th colspan="<%= @categories_expense.length + 2 %>" class="balance" id="initial-balance" style="border-top: none; border-bottom: none">
             <span class="pull-left"><small>
@@ -120,6 +120,7 @@
       <th rowspan="2" class="valign_middle text-center"><small>Opis<br/>Numer dokumentu</small></th>
       <th colspan="<%= @categories_income.length %>" class="text-center"><small><%=t 'helpers.label.journal.income_detailed'%></small></th>
       <th rowspan="2" class="income income_all valign_middle text-center"><small><%=t 'helpers.label.journal.income_all'%></small></th>
+      <th rowspan="2" class="balance valign_middle text-center"><small><%=t 'helpers.label.journal.balance'%></small></th>
       <th rowspan="2" class="expense expense_all valign_middle text-center"><small><%=t 'helpers.label.journal.expense_all'%></small></th>
       <th colspan="<%= @categories_expense.length %>" class="text-center"><small><%=t 'helpers.label.journal.expense_detailed'%></small></th>
     </tr>
@@ -177,6 +178,12 @@
           </small>
         </td>
 
+        <td class="balance text-right" title="<%=t 'helpers.label.journal.balance'%>">
+          <small>
+            <% print_formatted_amount(entry.balance) %>
+          </small>
+        </td>
+
         <td class="expense expense_all text-right" title="<%=t 'helpers.label.journal.expense_all'%>">
           <small>
           <% if entry.is_expense
@@ -219,6 +226,11 @@
           <% print_formatted_amount(@journal.get_income_sum) %>
         </small>
       </td>
+      <td class="balance text-right" title="<%=t 'helpers.label.journal.balance'%>">
+        <small>
+          <%= number_with_precision(@journal.get_final_balance, :precision => 2) %> zł
+        </small>
+      </td>
       <td class="expense expense_all text-right" title="<%=t 'helpers.label.journal.expense_all'%>">
         <small>
           <% print_formatted_journal_sums_with_grants(t('helpers.label.journal.expense_all'), @journal) %>
@@ -235,7 +247,7 @@
     </tr>
 
     <tr>
-      <th colspan="3"></th>
+      <th colspan="4"></th>
       <th colspan="<%= @categories_income.length %>" class="balance-label"><span class="pull-right text-muted"><small>Saldo końcowe:</small></span></th>
       <th colspan="<%= @categories_expense.length + 2 %>" class="balance" id="initial-balance">
         <span class="pull-left"><small>
@@ -244,7 +256,7 @@
       </th>
     </tr>
     <tr>
-      <th colspan="3" style="border-top: none"></th>
+      <th colspan="4" style="border-top: none"></th>
       <th colspan="<%= @categories_income.length %>" class="balance-label" style="border-top: none"><span class="pull-right text-muted"><small>w tym 1%:</small></span></th>
       <th colspan="<%= @categories_expense.length + 2 %>" class="balance" id="initial-balance" style="border-top: none">
         <span class="pull-left"><small>
@@ -255,7 +267,7 @@
 
     <% @grants_by_journal_year.each do |grant| %>
       <tr>
-        <th colspan="3" style="border-top: none"></th>
+        <th colspan="4" style="border-top: none"></th>
         <th colspan="<%= @categories_income.length %>" class="balance-label" style="border-top: none"><span class="pull-right text-muted"><small>w tym <%= grant.name %>:</small></span></th>
         <th colspan="<%= @categories_expense.length + 2 %>" class="balance" id="initial-balance" style="border-top: none">
           <span class="pull-left"><small>
