--- a/app/views/journals/show.html.erb
+++ b/app/views/journals/show.html.erb
@@ -70,7 +70,7 @@
 
 <div class="row top-buffer-40">
   <div class="col-md-8">
-    <%== pagy_nav(@pagy) if @page != 0 %>
+    <%== pagy_nav(@pagy, size: 10) if @page != 0 %>
   </div>
   <div class="col-md-4" style="margin: 20px 0;">
     <%= render "shared/entries_number_select" %>
