--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -1,28 +1,46 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="col-md-6">
+    <div class="well">
+      <div class="row">
+        <div class="col-md-3">
+            <strong>Data:</strong>
+            <%= @entry.date %>
+        </div>
+        <div class="col-md-6 col-md-offset-3">
+            <strong>Numer dokumentu:</strong>
+            <%= @entry.document_number %>
+        </div>
+      </div>
+      <div class="row top-buffer-20">
+        <div class="col-md-12">
+            <strong>Nazwa:</strong>
+            <%= @entry.name %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
-<p>
-  <b>Date:</b>
-  <%= @entry.date %>
-</p>
+<div class="row top-buffer-20">
+  <div class="col-md-12">
+    <p id="notice"><%= notice %></p>
+  </div>
+</div>
 
-<p>
-  <b>Name:</b>
-  <%= @entry.name %>
-</p>
+<div class="row top-buffer-20">
+  <div class="col-md-12">
+    <% @categories.each do |category| %>
+        <div class="row col-md-12 top-buffer-20">
+          <strong><%= category.name %>:</strong>
+          <%= @entry.get_amount_for_category(category.id) %>
+        </div>
+      <% end %>
+  </div>
+</div>
 
-<p>
-  <b>Document number:</b>
-  <%= @entry.document_number %>
-</p>
-
-
-<% @categories.each do |category| %>
-  <p>
-    <b><%= category.name %></b>
-    <%= @entry.get_amount_for_category(category.id) %>
-  </p>
-<% end %>
-
-
-<%= link_to 'Edytuj', edit_entry_path(@entry) %> |
-<%= link_to 'Wstecz', journal_path(@entry.journal) %>
+<div class="row top-buffer-20">
+  <div class="col-md-12">
+    <%= link_to 'Edytuj', edit_entry_path(@entry), class: "btn btn-sm btn-primary mx-2" %>   |
+    <%= link_to 'Wstecz', journal_path(@entry.journal), class: "btn btn-sm btn-secondary mx-1" %>
+  </div>
+</div>
